# ironside

./: .gitignore  .gitmodules  Cargo.toml  README.md  board  build.rs  klipper.dot  pyproject.toml  rustfmt.toml  wrapper.h
benches/: ffi_bench.rs
ironside-build-tools/: Cargo.toml
ironside-build-tools/src/: lib.rs
ironside-macros/: Cargo.toml
ironside-macros/src/: lib.rs
ironside-task/: Cargo.toml  README.md
proptest-regressions/: proto.txt
src/: cli.rs  configfile.rs  data.rs  kinematics.rs  lib.rs  mcu.rs  messages.rs  msgblock.rs  proto.rs  serialqueue.rs  testutils.rs
src/ffi/: command.rs  mod.rs
src/proto/: command.rs  data.rs  mod.rs
