[package]
name = "ironside-build-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
proc-macro2 = "1.0.36"
quote = "1.0.15"
serde = { version = "1.0.136", features = ["derive"] }
serde-tuple-vec-map = "1.0.0"
serde_json = "1.0.79"
strum = { version = "0.24.0", features = ["derive"] }
syn = "1.0.89"
